INCLUDES = -I$(top_srcdir)/libcelt
METASOURCES = AUTO

TESTS = type-test ectest cwrs32-test dft-test laplace-test mdct-test mathops-test rotation-test

noinst_PROGRAMS = type-test ectest cwrs32-test dft-test laplace-test mdct-test mathops-test rotation-test

type_test_SOURCES = tests/type-test.c
ectest_SOURCES = tests/ectest.c
cwrs32_test_SOURCES = tests/cwrs32-test.c
dft_test_SOURCES = tests/dft-test.c
laplace_test_SOURCES = tests/laplace-test.c
mdct_test_SOURCES = tests/mdct-test.c
mathops_test_SOURCES = tests/mathops-test.c
rotation_test_SOURCES = tests/rotation-test.c
